--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
 scraper = "0.13.0"
+itertools = "0.10.3"
