--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
 scraper = "0.13.0"
 itertools = "0.10.3"
+httptest = "0.15.4"
