--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ reqwest = { version = "0.11.10", features = ["blocking", "json"] }
 scraper = "0.13.0"
 itertools = "0.10.3"
 httptest = "0.15.4"
+teloxide = { version = "0.10", features = ["macros", "auto-send"] }
+log = "0.4"
+pretty_env_logger = "0.4"
+tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
