--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ teloxide = { version = "0.10", features = ["macros", "auto-send"] }
 log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+clap = {version = "4.0.8", features = ["derive"] }
