--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 clap = {version = "4.0.8", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
