--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 clap = {version = "4.0.8", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
