--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ clap = {version = "4.0.8", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
+opentelemetry = "0.18.0"
+opentelemetry-jaeger = "0.17.0"
