sculpture center sending too many notifications for the same posting
s/Curator/Curatorial Assistant to see if that helps

--- a/targets.yaml
+++ b/targets.yaml
@@ -11,7 +11,7 @@
   text: Curator
 
 - uri: https://www.sculpture-center.org/support/7157/jobs-and-internships
-  text: Curator
+  text: Curatorial Assistant
 
 - uri: https://www.cooperhewitt.org/careers/
   text: Curator
